[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "secretserver"
version = "1.0.0"
description = "SecretServer.io Python client library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://secretserver.io"
Repository = "https://github.com/afterdarksys/secretserver-clients"
Documentation = "https://secretserver.io/docs/clients/python"
